linode/k8s/istio/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: ingress-gateway
  labels:
    app: istio-ingressgateway
    istio: ingressgateway
spec:
  gatewayClassName: istio
  listeners:
    - name: http
#      hostname: "bar.example.com"
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
