linode/k8s/istio/bar-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: bar-route
spec:
  parentRefs:
    - name: ingress-gateway
  hostnames:
    - "bar.example.com"
  rules:
    - matches:
#      - requestHeader:
#          type: Exact
#          name: service
#          value: bar
#      - path:
#          type: PathPrefix
#          value: /
      backendRefs:
        - name: bar-service
          port: 80


#    - filters:
#      - type: RequestRedirect
#        requestRedirect:
#          scheme: https
#          statusCode: 301
