linode/k8s/istio/foo-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: foo-route
spec:
  parentRefs:
    - name: ingress-gateway
  hostnames:
    - "foo.example.com"
  rules:
    - matches:
#      - requestHeader:
#          type: Exact
#          name: service
#          value: bar
#      - path:
#          type: PathPrefix
#          value: /
      backendRefs:
        - name: foo-vs
          port: 80


#    - filters:
#      - type: RequestRedirect
#        requestRedirect:
#          scheme: https
#          statusCode: 301
