linode/k8s/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: foo-vs
spec:
  http:
    - name: "foo-vs"
      route:
        - destination:
            host: foo-version
            subset: v1
